# onyo

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  autorun.test  list-for-alex  mv.py  nested.yaml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: deploy_demo.yaml  main.yml  tests.yaml
demo/: .onyoignore  README.md  generate_demo_repo.sh  inventory.tsv
demo/.github/workflows/: pull_demo.yaml
docs/: Makefile
docs/source/: changelog.rst  cmd_cat.rst  cmd_config.rst  cmd_edit.rst  cmd_fsck.rst  cmd_get.rst  cmd_git.rst  cmd_history.rst  cmd_init.rst  cmd_mkdir.rst  cmd_mv.rst  cmd_new.rst  cmd_onyo.rst  cmd_rm.rst  cmd_rmdir.rst  cmd_set.rst  cmd_shell-completion.rst  cmd_show.rst  cmd_tree.rst  cmd_tsv_to_yaml.rst  cmd_unset.rst  command_line_reference.rst  concepts.rst  conf.py  configuration.rst  examples.rst  index.rst  installation.rst  introduction.rst  onyo.rst
onyo/: __init__.py  argparse_helpers.py  conftest.py  main.py  onyo_arguments.py  onyo_init  onyo_new  shared_arguments.py  utils.py
onyo/cli/: __init__.py  cat.py  config.py  edit.py  fsck.py  get.py  history.py  init.py  mkdir.py  mv.py  new.py  rm.py  rmdir.py  set.py  shell_completion.py  show.py  tree.py  tsv_to_yaml.py  unset.py
onyo/cli/tests/: test_cat.py  test_config.py  test_edit.py  test_get.py  test_history.py  test_init.py  test_mkdir.py  test_mv.py  test_new.py  test_onyo.py  test_rm.py  test_rmdir.py  test_set.py  test_tree.py  test_tsv_to_yaml.py  test_unset.py
onyo/cli/tests/tables/: error_identical_entries.tsv  error_incomplete_rows.tsv  error_template_does_not_exist.tsv  table.tsv  table_with_key_values.tsv  table_with_template.tsv
onyo/commands/: __init__.py  anchor.py  cat.py  config.py  edit.py  fsck.py  get.py  git.py  history.py  init.py  mkdir.py  mv.py  new.py  rm.py  set.py  shell_completion.py  tree.py  unanchor.py  unset.py
onyo/commands/tests/: test_cat.py  test_config.py  test_edit.py  test_get.py  test_history.py  test_init.py  test_mkdir.py  test_mv.py  test_new.py  test_onyo.py  test_rm.py  test_set.py  test_tree.py  test_unset.py
onyo/commands/tests/tables/: error_empty_columns.tsv  error_identical_entries.tsv
onyo/lib/: __init__.py  assets.py  command_utils.py  commands.py  consts.py  decoder.py  differs.py  exceptions.py  executors.py  faker.py  filters.py  git.py  inventory.py  items.py  onyo.py  parser.py  pseudokeys.py  recorders.py  ui.py  utils.py
onyo/lib/tests/: __init__.py  test_Filter.py  test_command_utils.py  test_commands_cat.py  test_commands_get.py  test_commands_mkdir.py  test_commands_mv.py  test_commands_new.py  test_commands_rm.py  test_commands_rmdir.py  test_commands_set.py  test_commands_tree.py  test_commands_tsv_to_yaml.py  test_commands_unset.py  test_git.py  test_inventory.py  test_inventory_operations.py  test_item.py  test_items_ItemSpec.py  test_onyo.py  test_utils.py  test_utils_dotnotationwrapper.py
onyo/shell_completion/: zsh
onyo/shell_completion/zsh/: _onyo
onyo/skel/: config
onyo/skel/templates/: laptop.example
onyo/skel/validation/: validation.yaml
onyo/templates/: default  laptop
onyo/tests/: __init__.py  benchmark.py  test_main.py  test_usecases.py
onyo/tests/demo/: reference_git_log.txt  test_generate_demo_repo.py
onyo/tests/tables/: error_only_header.tsv  table.tsv  table.yaml
onyo/tests/templates/: empty_template_dir_file  template_dir_file
onyo/tests/templates/asset_dir/: .onyo-asset-dir  asset1
onyo/tests/templates/asset_dir/subdir/: asset3
onyo/tests/templates/template_dir/: asset2
onyo/validation/: validation.yaml
tests/: __init__.py  autorun.sh  conftest.py  default_tests.py  test_cat.py  test_config.py  test_init.py  test_invoking.py  test_main.py  test_mkdir.py  test_rm.py  test_shell-completion.py  test_utils.py
tests/commands/: test_cat.py  test_config.py  test_edit.py  test_get.py  test_history.py  test_init.py  test_mkdir.py  test_mv.py  test_new.py  test_onyo.py  test_rm.py  test_set.py  test_shell-completion.py  test_tree.py  test_unset.py
tests/demo/: reference_git_log.txt  test_generate_demo_repo.py
tests/lib/: test_Filter.py  test_Repo.py  test_Repo_add.py  test_Repo_commit.py  test_Repo_config.py  test_Repo_fsck.py  test_Repo_mkdir.py  test_Repo_mv.py  test_Repo_new.py  test_Repo_rm.py  test_generate_commit_message.py
tests/output_goals/: test_tree_output.txt
tests/output_goals/test 1/: delete_device.txt  init_test.txt  set_recursive.txt  set_shelf_laptop.txt  test_tree_output.txt
tests/output_goals/test 2/: cat_output.txt  delete_device.txt  git_status_working_tree_clean.txt  set_device_good.txt  set_recursive.txt  test_tree_output.txt
tests/output_goals/test_1/: delete_device.txt  init_test.txt  onyo_new_works.txt  test_tree_output.txt
tests/output_goals/test_2/: init_test.txt  test_tree_output.txt
tests/output_goals/test_3/: init_test.txt
tests/output_goals/test_4/: init_test.txt  onyo_new_works.txt
tests/reference_output/C_absolute/: init_test.txt  set_device_good.txt  set_recursive.txt  set_shelf_laptop.txt  test_tree_output.txt
tests/reference_output/root_of_repo/: delete_device.txt  init_test.txt  new.txt  set_recursive.txt  test_tree_output.txt
tests/reference_output/test 1/: init_test.txt  set_device_good.txt
tests/tables/: error_incomplete_rows.tsv  error_template_does_not_exist.tsv  table.tsv
